--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -81,7 +81,7 @@ a
   outline: 0
   
 a:hover, a:focus
-  color: lighten($accent-color, 20%)
+  color: $accent-color
 
 
 
@@ -104,17 +104,6 @@ body
 
 // Buttons
 
-#{$all-buttons} 
-  background-color: $accent-color;
-
-
-#{$all-buttons-focus},
-#{$all-buttons-hover} 
-  background-color: darken($accent-color, 80%);
-
-
-#{$all-buttons-active} 
-  background-color: $accent-color;
 
 
 // Mobile and Media Query Variables
