--- a/assets/css/2-modules/_work.sass
+++ b/assets/css/2-modules/_work.sass
@@ -119,9 +119,12 @@
 		+shift(1)
 		+button
 		text-align: center
+		color: #fff
+		background-color: $accent-color
 		+media($mobile)
 			+span-columns(6 of 12)
 			+shift(3)
+
 
 
 @media (max-width: 850px)
